frontend/src/ShowInventories.scss
#show-inventory-container {
  height: 100%;
  align-self: baseline;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border-radius: 15px;
  background-color: #fff;
}

.author-inventory-line {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  // &:hover {
  //   cursor: pointer;
  // }
}

.author-inventory-label {
  margin: 0;
  // font-size: clamp(0.8rem, 1.2rem, 1.2rem);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.author-inventory-number {
  margin: 0;
}

.author-inventory-was {
  display: flex;
  margin: 0.5rem 0.75rem 0.25rem 0.75rem;
  font-style: italic;
  font-size: 0.95em;
  justify-content: space-between;
}

.author-inventory-was-country {
  margin: 0;
}

.author-inventory-was-number {
  margin: 0;
}

.show-inventory-active {
  background-color: #4E5981;
  border-radius: 15px;
  color: white
}

